css/resume.css
body{
  width: 100%;
  height: 100%;
}

#navbar {
  background-color: rgba(0, 0, 0, .6);
}

#background {
  position: fixed;
  top: 0;
  left: 0;

  width: 100%;
  height: 100%;
  background-color: rgba(35, 166, 213, .3); //#23a6d5;
  z-index: -1;
  -webkit-animation: hue-rotate 30s linear infinite;
     -moz-animation: hue-rotate 30s linear infinite;
       -o-animation: hue-rotate 30s linear infinite;
          animation: hue-rotate 30s linear infinite;
}

/* TODO: make all animations cross browser*/

@keyframes dim-rotate {
  from {
    -webkit-filter: brightness(40%) hue-rotate(0);
    -moz-filter: brightness(40%) hue-rotate(0);
    -ms-filter: brightness(40%) hue-rotate(0);
    filter: brightness(40%) hue-rotate(0);
  }
  to {
    -webkit-filter: brightness(40%) hue-rotate(360deg);
    -moz-filter: brightness(40%) hue-rotate(360deg);
    -ms-filter: brightness(40%) hue-rotate(360deg);
    filter: brightness(40%) hue-rotate(360deg);
  }
}

@keyframes hue-rotate {
  from {
    -webkit-filter: hue-rotate(0);
    -moz-filter: hue-rotate(0);
    -ms-filter: hue-rotate(0);
    filter: hue-rotate(0);
    }
  to {
    -webkit-filter: hue-rotate(360deg);
    -moz-filter: hue-rotate(360deg);
    -ms-filter: hue-rotate(360deg);
    filter: hue-rotate(360deg);
    }
}

#resume{
  position: relative;
  width: 96%;

  margin: 50px auto 50px auto;

  border: 4px solid #fff !important;
  background-color: transparent;
  box-shadow: 2px 0px 10px 10px black;

  color: white;
}



.name{
  background: url(../images/resume-header.jpg);
  padding:80px 0 20px 0;
  text-align:center;
  border: 2px solid black;
  align-items: center;
  background-attachment: relative;
  min-height: 400px;
  word-wrap: break-word;

  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;

  -webkit-animation: bright-rotate 30s linear infinite;
     -moz-animation: bright-rotate 30s linear infinite;
       -o-animation: bright-rotate 30s linear infinite;
          animation: bright-rotate 30s linear infinite;
}

@keyframes bright-rotate {
  from {
    -webkit-filter: saturate(2) brightness(140%) hue-rotate(0);
    -moz-filter: saturate(2) brightness(140%) hue-rotate(0);
    -ms-filter: saturate(2) brightness(140%) hue-rotate(0);
    filter: saturate(2) brightness(140%) hue-rotate(0);
  }
  to {
    -webkit-filter: saturate(2) brightness(140%) hue-rotate(360deg);
    -moz-filter: saturate(2) brightness(140%) hue-rotate(360deg);
    -ms-filter: saturate(2) brightness(140%) hue-rotate(360deg);
    filter: saturate(2) brightness(140%) hue-rotate(360deg);
  }
}



.name>h1 {
  font-size: 70px;
  color: black;
  margin: 0 35% 30px 35%;
  border: 2px solid black;
  background: rgba(255,255,255,0.9);
  text-shadow: 2px 2px 2px grey;
  box-shadow: 5px 5px 5px black;
}

.name>h3 {
  font-size: 20px;
  color: black;
  margin: 0 40% 0 40%;
  border: 2px solid black;
  padding-bottom: 5px;
  background: rgba(255,255,255,0.9);
  text-shadow: 1px 1px 1px grey;
  box-shadow: 5px 5px 5px black;
}

.name>h3 a {
  color: black;
  text-decoration: underline;
}

.name>h3 a:hover{
  color: white;
  border-bottom: none;
}

@media only screen and (max-width: 1340px) {
  .name>h1 { margin: 0px 25% 30px 25%; }
  .name>h3 { margin: 0 35% 0 35%; }
}

/* About Section */

.about {
  background-color: rgba(0, 0, 0,0.7);
  border-top: 5px solid #FFF !important;
}

.about p{
  text-align: center;
  margin: 0 5% 0 5%;
  padding: 15px 0px 15px 0px;
  text-shadow: 2px 2px 2px black;
}

/* Tabs */
.row{
  background-color: transparent;
}
.row:after,.row:before {content:"";display:table;clear:both}

.title {
  background-color: transparent;
  font-weight: bolder;
  text-align: center;
  color: #FFF;
  font-size: 30px;
  padding: 10px 0 15px 0;

  border-top: 5px solid #FFF !important;
  border-bottom: 5px solid #FFF !important;
  box-shadow: inset -2px 0px 10px 10px black;
  text-shadow: 2px 2px 2px black;
}

.third {
  float: left;
  width: 33.333333%;
  padding:8px 16px!important;


  background-color:#000000;
  border-bottom:5px solid transparent !important;
}

.third:hover {
  background-color: transparent;
}

.tab-border{
  border-bottom: 5px solid #FFF !important;
  background-color: #000;
}

@media only screen and (max-width: 648px) { .row1{height: 70px} }
@media only screen and (max-width: 455px) { .row1{height: 94px} }
@media only screen and (max-width: 289px) { .row1{height: 108px} }
@media only screen and (max-width: 280px) { .row1{height: 122px} }
@media only screen and (max-width: 378px) { .row2{height: 70px} }
@media only screen and (max-width: 246px) { .row2{height: 94px} }
@media only screen and (max-width: 213px) { .row2{height: 108px} }

.third p {
  color: #f4f2ee;
  margin: 0px;
  text-align: center;
  font-weight: bolder;
  font-size: 18px;
  word-wrap: break-word;
}



.tab-container {
  padding: 16px 16px !important;
  background-color: rgba(0, 0, 0,0.5);
  border-top: 1px solid white;
  text-shadow: 2px 2px 2px black;
}

.tab-container a {
    color: black;
    text-shadow: 1px 1px 1px black;
}

.tab-container a:hover { color: white; }


/* Languages Tab*/

.lang-tab{
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: center;
  font-size: 20px;
}

.lang-tab p {
  margin: 4px 0;
}
.lang-box{
  width: 250px;
}

.langs{
  width: 100px;
  float: left;
}

.stars {
  color: lightblue;
  width: 150px;
  float: left;
  -webkit-animation: bright-rotate 30s linear infinite;
     -moz-animation: bright-rotate 30s linear infinite;
       -o-animation: bright-rotate 30s linear infinite;
          animation: bright-rotate 30s linear infinite;
}

/* Tool Tab */

.tool-tab{
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: center;
}

.tool-box{
  width: 400px;
  margin: 5px 0px;
}

.category {
  width: 180px;
  float: left;
  font-weight: bolder;
}

.tools {
  width: 220px;
  float: left;
}


/* Education Tab */

.edu-tab{
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: center;
}

.edu-tab img{
  margin-right: 20px;
  filter: drop-shadow(0 0 15px #FFE395);
}

.school p{
  font-size: 22px;
  margin: 10px 0;
}

.community{
  margin-left: 40px;
}
.community p{
  font-size: 16px;
}

.community span{
  font-size: 14px;
  margin-left: 20px;
}

/* Accordion */
.accordion {
  background-color: #000;
  color: #FFF;
  font-weight: bold;
  cursor: pointer;
  padding: 18px;
  width: 100%;
  text-align: left;
  outline: none;
  border: none;
  transition: 0.4s;
}

.active, .accordion:hover {
  background-color: #ccc;
  color: black;
}

.panel {
  padding: 0 18px;
  background-color: rgba(0, 0, 0,0.4);
  border: 1px solid #ccc;
  display: none;
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.2s ease-out;
  text-shadow: 1px 1px 1px black;
}

.panel>ul{
  padding: 10px;
}

.panel>ul>li{
  padding: 10px;
}

.accordion:after {
  content: '\02795'; /* Unicode character for "plus" sign (+) */
  font-size: 13px;
  color: #777;
  float: right;
  margin-left: 5px;
}

.active:after {
  content: "\2796"; /* Unicode character for "minus" sign (-) */
}

ul {
  list-style-position: outside;
}

/* Animation */
.fadeInUp {
  opacity: 0;
  -webkit-animation: fadeInUp 1s both .5s;
  -moz-animation: fadeInUp 1s both .5s;
  -o-animation: fadeInUp 1s both .5s;
  animation: fadeInUp 1s both .5s;

}

/* 1 */
@-webkit-keyframes fadeInUp {
  0% {-webkit-transform: translateY(20px);}
  100% {
    opacity: 1;
    -webkit-transform: translateY(0);
  }
}

@-moz-keyframes fadeInUp {
  0% {-webkit-transform: translateY(20px);}
  100% {
    opacity: 1;
    -moz-transform: translateY(0);
  }
}

@-o-keyframes fadeInUp {
  0% {-webkit-transform: translateY(20px);}
  100% {
    opacity: 1;
    -o-transform: translateY(0);
  }
}

@keyframes fadeInUp {
  0% {-webkit-transform: translateY(20px);}
  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

